--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
             aria-labelledby="exampleModalLongTitle"
             aria-hidden="true"
           >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog" id="displayContent" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLongTitle">
