add title image

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
     <!--Custom css-->
     <link rel="stylesheet" href="css/bloodBank.css" type="text/css" />
+    <link rel="icon" href="https://www.theitem.com/uploads/original/20190629-180145-bloodDROP_30834.jpg" type="image/icon type">
   </head>
   <body>
     <header>
